--- a/dashboard.html
+++ b/dashboard.html
@@ -7,23 +7,8 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="module" src="./js/supabaseClient.js"></script>
-    <script type="module">
-        import { SessionManager } from './js/sessionManager.js';
-        import { supabase } from './js/supabaseClient.js';
-
-        // Verifica autenticazione all'avvio
-        const checkAuth = async () => {
-            const { data: { session } } = await supabase.auth.getSession();
-            if (!session) {
-                window.location.href = 'login.html';
-                return;
-            }
-            // Avvia il timer della sessione
-            SessionManager.startSessionTimer();
-        };
-
-        checkAuth();
-    </script>
+    <script type="module" src="./js/protect-dashboard.js"></script>
+    <!-- RIMUOVI O COMMENTA eventuali altri script di controllo sessione qui -->
 </head>
 <body>
     <header class="dashboard-header">
@@ -355,6 +340,37 @@
             });
         </script>
         <script type="module" src="./js/dashboard.js"></script>
+        <script type="module">
+            import { supabase } from './js/supabaseClient.js';
+
+            document.addEventListener('DOMContentLoaded', () => {
+                const logoutBtn = document.getElementById('logout-button');
+                if (logoutBtn) {
+                    logoutBtn.addEventListener('click', async function(e) {
+                        e.preventDefault();
+                        try {
+                            await supabase.auth.signOut();
+                        } catch (err) {
+                            // Ignora errori di logout
+                        }
+                        window.location.assign('login.html');
+                    });
+                }
+            });
+        </script>
+        <script type="module">
+            import { supabase } from './js/supabaseClient.js';
+
+            document.getElementById('logout-button').addEventListener('click', async (e) => {
+                e.preventDefault();
+                try {
+                    await supabase.auth.signOut();
+                } catch (err) {
+                    // Ignora errori di logout
+                }
+                window.location.href = 'login.html';
+            });
+        </script>
     </main>
     <footer class="dashboard-footer">
         <p>&copy; 2023 Sabrina Onicotecnica. Tutti i diritti riservati.</p>
