Aggiorna dashboard e funzionalità

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Dashboard - Sabrina Onicotecnica</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="module" src="./js/supabaseClient.js"></script>
-    <script type="module" src="./js/protect-dashboard.js"></script>
-    <!-- NON aggiungere altri script di controllo sessione qui -->
+    <script type="module" src="./js/protect-dashboard.js"></script> <!-- <<< QUI, PRIMA DI ALTRI SCRIPT DELLA DASHBOARD -->
+    <!-- Altri script o stili -->
 </head>
 <body>
     <header class="dashboard-header">
