--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
     <script type="module" src="./js/supabaseClient.js"></script>
     <script type="module" src="./js/protect-dashboard.js"></script> <!-- <<< QUI, PRIMA DI ALTRI SCRIPT DELLA DASHBOARD -->
     <!-- Altri script o stili -->
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <header class="dashboard-header">
