--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Dashboard</title>
     <link rel="stylesheet" href="css/dashboard.css">
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <div class="login-container">
