--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onicotecnica Sabrina</title>
+    <meta name="google-site-verification" content="kYqbJ3xsQHbCu5YRZrKmmMmSz8L4BSQLBiJ0RKHS1GY" />
     <!-- Percorsi aggiornati -->
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
