--- a/index.html
+++ b/index.html
@@ -490,5 +490,16 @@
             document.querySelector('.popup-overlay').classList.remove('active');
         });
     </script>
+
+    <!-- Pulsante WhatsApp fluttuante -->
+    <a
+        href="https://wa.me/393299362917?text=Ciao%20Sabrina%2C%20vorrei%20prenotare%20un%20trattamento%20unghie!"
+        class="whatsapp-float"
+        target="_blank"
+        aria-label="Chatta su WhatsApp"
+        rel="noopener"
+    >
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </body>
 </html>
