Aggiorna sitemap.xml e migliora impostazioni SEO

--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
     <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
-    <div class="marquee-container">
+
+    <div class="marquee-container summer-banner">
+    <div class="marquee-content">
+        <span>☀️ Estate 2025: Prepara le tue unghie per le vacanze! Novità e colori estivi disponibili! ☀️</span>
+        <span>☀️ Estate 2025: Prepara le tue unghie per le vacanze! Novità e colori estivi disponibili! ☀️</span>
+        <span>☀️ Estate 2025: Prepara le tue unghie per le vacanze! Novità e colori estivi disponibili! ☀️</span>
+    </div>
+</div>
+
+    <!--<div class="marquee-container">
         <div class="marquee-content">
             <span><i class="fas fa-gift"></i> OFFERTA SPECIALE: Prenota online e ricevi il 10% di sconto! <i class="fas fa-gift"></i></span>
             <span><i class="fas fa-gift"></i> OFFERTA SPECIALE: Prenota online e ricevi il 10% di sconto! <i class="fas fa-gift"></i></span>
@@ -67,6 +76,7 @@
             <a href="#prenotazioni" class="popup-button">Prenota Ora</a>
         </div>
     </div>
+-->
     <header>
         <nav class="navigation">
             <!-- Sposta il logo e il titolo in un contenitore per migliore allineamento -->
